RESOLVED FIXED300124
WebTransport should notify JS of connection group failures
https://bugs.webkit.org/show_bug.cgi?id=300124
Summary WebTransport should notify JS of connection group failures
Alex Christensen
Reported 2025-10-03 11:09:44 PDT
...
Attachments
Alex Christensen
Comment 1 2025-10-03 11:09:48 PDT
Alex Christensen
Comment 2 2025-10-03 11:11:27 PDT
EWS
Comment 3 2025-10-03 12:53:56 PDT
Committed 300965@main (3bb7c385b057): <https://commits.webkit.org/300965@main> Reviewed commits have been landed. Closing PR #51767 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.